style code cleaning, corrected wrapping on footer social media icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -961,7 +961,16 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
-	.advice-slogan {
+	.social-media{
+        white-space: nowrap;
+    }
+    .social-media i {
+        display: inline-block;
+        position:relative;
+        top:27px;
+        right: 80px;
+    }
+    .advice-slogan {
 		left: 10px;
 	}
 	.main-page-background {
